--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,4 @@
 GROUP=com.stripe
-
 POM_URL=https://github.com/stripe/stripe-android
 POM_SCM_URL=https://github.com/stripe/stripe-android
 POM_SCM_CONNECTION=scm:git@github.com/stripe/stripe-android.git
@@ -10,13 +9,12 @@ POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=stripe
 POM_DEVELOPER_NAME=Stripe
 POM_DEVELOPER_EMAIL=support+android@stripe.com
-
 android.defaults.buildfeatures.buildconfig=true
 android.enableJetifier=false
 android.enableR8.fullMode=true
 android.nonFinalResIds=true
 android.nonTransitiveRClass=true
 android.useAndroidX=true
-
 # Update StripeSdkVersion.VERSION_NAME when publishing a new release
 VERSION_NAME=20.43.0
+org.gradle.configuration-cache=true
