--- a/settings.gradle
+++ b/settings.gradle
@@ -27,3 +27,4 @@ include ':ml-core:default'
 include ':ml-core:cardscan'
 include ':ml-core:googleplay'
 include ':screenshot-testing'
+include ':baselineprofile'
