--- a/hcaptcha/build.gradle
+++ b/hcaptcha/build.gradle
@@ -31,37 +31,37 @@ android {
     }
 }
 
-// Generate the HTML class for hCaptcha
-android.libraryVariants.all { variant ->
-    def variantName = variant.name.capitalize()
-    def packageName = "com.stripe.hcaptcha"
-    def outputDir = file("${project.buildDir}/generated/source/hcaptcha/${variant.name}/${packageName.replaceAll('\\.', '/')}")
-    def generateTask = project.task("generate${variantName}JavaClassFromStaticHtml") {
-        group 'Generate'
-        description "Generate HTML java class"
-
-        doFirst {
-            def outputJavaClass = file("$outputDir/HCaptchaHtml.kt")
-            def template = file("$projectDir/src/main/html/HCaptchaHtml.java.tml").text
-            def html = file("$projectDir/src/main/html/hcaptcha.html")
-                    .readLines()
-                    .stream()
-                    .collect(Collectors.joining("\n"))
-
-            def engine = new SimpleTemplateEngine()
-            def src = engine.createTemplate(template).make([
-                    "htmlContent": html,
-                    "packageName": packageName
-            ])
-
-            outputDir.mkdirs()
-            outputJavaClass.write(src.toString())
-        }
-    }
-
-    // preBuild.dependsOn generateTask
-    variant.registerJavaGeneratingTask(generateTask, outputDir)
-}
+//// Generate the HTML class for hCaptcha
+//android.libraryVariants.all { variant ->
+//    def variantName = variant.name.capitalize()
+//    def packageName = "com.stripe.hcaptcha"
+//    def outputDir = file("${project.buildDir}/generated/source/hcaptcha/${variant.name}/${packageName.replaceAll('\\.', '/')}")
+//    def generateTask = project.task("generate${variantName}JavaClassFromStaticHtml") {
+//        group 'Generate'
+//        description "Generate HTML java class"
+//
+//        doFirst {
+//            def outputJavaClass = file("$outputDir/HCaptchaHtml.kt")
+//            def template = file("$projectDir/src/main/html/HCaptchaHtml.java.tml").text
+//            def html = file("$projectDir/src/main/html/hcaptcha.html")
+//                    .readLines()
+//                    .stream()
+//                    .collect(Collectors.joining("\n"))
+//
+//            def engine = new SimpleTemplateEngine()
+//            def src = engine.createTemplate(template).make([
+//                    "htmlContent": html,
+//                    "packageName": packageName
+//            ])
+//
+//            outputDir.mkdirs()
+//            outputJavaClass.write(src.toString())
+//        }
+//    }
+//
+//    // preBuild.dependsOn generateTask
+//    variant.registerJavaGeneratingTask(generateTask, outputDir)
+//}
 
 ext {
     artifactId = "hcaptcha"
