--- a/maestro/financial-connections/Testmode-PaymentIntent-TestInstitution.yaml
+++ b/maestro/financial-connections/Testmode-PaymentIntent-TestInstitution.yaml
@@ -23,8 +23,9 @@ tags:
     file: ../common/subflow-skip-chrome-welcome.yaml
 ###############################################
 # SELECT SUCCESS ACCOUNT
-- extendedWaitUntil:
-    visible: "Success"
+- scrollUntilVisible:
+    element:
+      text: "Success"
     timeout: 60000
 - tapOn: "Success" # select all accounts
 - tapOn:
