Adds mock data for consent.

--- a/baselineprofile/build.gradle
+++ b/baselineprofile/build.gradle
@@ -45,15 +45,15 @@ android {
 // This is the configuration block for the Baseline Profile plugin.
 // You can specify to run the generators on a managed devices or connected devices.
 baselineProfile {
-    managedDevices += "pixel6Api34"
-    useConnectedDevices = false
+//    managedDevices += "pixel6Api34"
+    useConnectedDevices = true
 }
 
 dependencies {
     implementation 'androidx.test.ext:junit:1.1.5'
     implementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'androidx.test.uiautomator:uiautomator:2.2.0'
-    implementation 'androidx.benchmark:benchmark-macro-junit4:1.2.3'
+    implementation 'androidx.test.uiautomator:uiautomator:2.3.0'
+    implementation 'androidx.benchmark:benchmark-macro-junit4:1.2.4'
 }
 
 androidComponents {
