--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -86,7 +86,7 @@ ext.buildLibs = [
         paparazzi                   : "app.cash.paparazzi:paparazzi-gradle-plugin:${versions.paparazzi}",
         poko                        : "dev.drewhamilton.poko:poko-compiler-plugin:${versions.poko}",
         shot                        : "com.karumi:shot:${versions.shot}",
-        benchmarkPlugin             : "androidx.benchmark:benchmark-baseline-profile-gradle-plugin:1.2.4",
+        benchmarkPlugin             : "androidx.benchmark:benchmark-baseline-profile-gradle-plugin:1.3.0-alpha04",
 ]
 
 ext.configs = [
