--- a/financial-connections/build.gradle
+++ b/financial-connections/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     api project(":stripe-core")
     api project(":stripe-ui-core")
     api project(":payments-model")
+    baselineProfile project(':baselineprofile')
 
     implementation libs.androidx.activity
     implementation libs.androidx.annotation
@@ -45,7 +46,7 @@ dependencies {
     implementation libs.kotlin.coroutinesAndroid
     implementation libs.kotlin.serialization
 
-    baselineProfile project(':baselineprofile')
+    implementation("androidx.profileinstaller:profileinstaller:1.3.1")
 
     debugImplementation libs.compose.uiTestManifest
     debugImplementation libs.compose.uiTooling
