--- a/financial-connections/src/main/AndroidManifest.xml
+++ b/financial-connections/src/main/AndroidManifest.xml
@@ -56,9 +56,24 @@
 
         <activity
             android:name="com.stripe.android.financialconnections.ui.FinancialConnectionsSheetNativeActivity"
-            android:exported="false"
+            android:exported="true"
             android:windowSoftInputMode="adjustResize"
-            android:theme="@style/StripeDefaultTheme" />
+            android:theme="@style/StripeDefaultTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- financial-connections://macrobenchmark/run -->
+                <data
+                    android:host="macrobenchmark"
+                    android:pathPrefix="/run"
+                    android:scheme="financial-connections" />
+
+
+            </intent-filter>
+        </activity>
     </application>
 
     <!--
