Add CvcRecollection Activity (#8469)
* Add CvcRecollection Activity

* Add playground settings

* Lint fix

* Lint fix

* Add CvcRecollectionViewModelTest, update CvcRecollectionScreen to use PrimaryButton

* Lint fix

* Update screenshots

* API dump

* Remove view model from CvcRecollectionScreen params

* Rerecord screenshots

--- a/paymentsheet/src/main/AndroidManifest.xml
+++ b/paymentsheet/src/main/AndroidManifest.xml
@@ -37,5 +37,9 @@
         <activity android:name=".ExternalPaymentMethodProxyActivity"
             android:theme="@style/StripePayLauncherDefaultTheme"
             android:exported="false" />
+        <activity
+            android:name=".paymentdatacollection.cvcrecollection.CvcRecollectionActivity"
+            android:theme="@style/StripePaymentSheetDefaultTheme"
+            android:windowSoftInputMode="adjustResize"/>
     </application>
 </manifest>
