--- a/bitrise.yml
+++ b/bitrise.yml
@@ -34,6 +34,8 @@ stages:
       - run-paymentsheet-instrumentation-tests: { }
       - run-example-instrumentation-tests: { }
       - run-financial-connections-instrumentation-tests: { }
+      - run-connections-e2e-payments-tests-on-push: { }
+      - run-connections-e2e-data-tests-on-push: { }
       - run-cardscan-instrumentation-tests: { }
       - run-paymentsheet-end-to-end-tests: { }
       - run-paymentsheet-screenshot-tests: { }
@@ -111,6 +113,18 @@ workflows:
     envs:
       - MAESTRO_TAGS: testmode-data
     before_run:
+      - _run-connections-e2e-tests
+  run-connections-e2e-payments-tests-on-push:
+    envs:
+      - MAESTRO_TAGS: testmode-payments
+    before_run:
+      - _build-connections
+      - _run-connections-e2e-tests
+  run-connections-e2e-data-tests-on-push:
+    envs:
+      - MAESTRO_TAGS: testmode-data
+    before_run:
+      - _build-connections
       - _run-connections-e2e-tests
   run-connections-e2e-livemode-tests:
     envs:
