--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,25 @@
 # Automatically request reviews from @android-sdk-reviewers by default, allow reviews from @android-sdk-non-core-reviewers
 * @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
+
+# Payments SDK
+/payment-method-messaging/ @android-payments-reviewers @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
+/payments/ @android-payments-reviewers @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
+/payments-core/ @android-payments-reviewers @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
+/payments-core-testing/ @android-payments-reviewers @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
+/payments-model/ @android-payments-reviewers @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
+/payments-ui-core/ @android-payments-reviewers @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
+/paymentsheet/ @android-payments-reviewers @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
+/paymentsheet-example/ @android-payments-reviewers @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
+
+# CardScan SDK
+/stripecardscan/ @android-cardscan-reviewers @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
+/stripecardscan-example/ @android-cardscan-reviewers @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
+/stripecardscan-tflite/ @android-cardscan-reviewers @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
+
+# Identity SDK
+/identity/ @android-identity-reviewers @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
+/identity-example/ @android-identity-reviewers @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
+
+# Financial Connections SDK
+/financial-connections/ @android-connections-reviewers @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
+/financial-connections-example/ @android-connections-reviewers @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
