Run end to end tests on more devices for nightly builds.

--- a/build-configuration/build-environment.gradle
+++ b/build-configuration/build-environment.gradle
@@ -1,2 +1,4 @@
 gradle.ext.isCi = System.getenv().containsKey("CI") && System.getenv("CI").contains("true")
 println "Running on CI: ${gradle.ext.isCi}"
+gradle.ext.isNightlyBuild = project.hasProperty("IS_NIGHTLY_BUILD") && project.IS_NIGHTLY_BUILD.contains("true")
+println "IS_NIGHTLY_BUILD: ${gradle.ext.isNightlyBuild}"
