--- a/paymentsheet-example/build.gradle
+++ b/paymentsheet-example/build.gradle
@@ -86,6 +86,7 @@ android {
         testInstrumentationRunner "com.karumi.shot.ShotTestRunner"
 
         buildConfigField "boolean", "IS_RUNNING_IN_CI", "$gradle.ext.isCi"
+        buildConfigField "boolean", "IS_NIGHTLY_BUILD", "$gradle.ext.isNightlyBuild"
 
         manifestPlaceholders = [
                 BACKEND_URL: getBackendUrl(),
