--- a/.github/workflows/instrumentation_tests.yml
+++ b/.github/workflows/instrumentation_tests.yml
@@ -23,6 +23,8 @@ jobs:
         env:
           BROWSERSTACK_USERNAME: ${{ secrets.BROWSERSTACK_USERNAME }}
           BROWSERSTACK_ACCESS_KEY: ${{ secrets.BROWSERSTACK_ACCESS_KEY }}
+          GOOGLE_PLAY_TESTING_EMAIL: ${{ secrets.GOOGLE_PLAY_TESTING_EMAIL }}
+          GOOGLE_PLAY_TESTING_SECRET: ${{ secrets.GOOGLE_PLAY_TESTING_SECRET }}
         run: python scripts/browserstack.py --test --apk paymentsheet-example/build/outputs/apk/debug/paymentsheet-example-debug.apk --espresso paymentsheet-example/build/outputs/apk/androidTest/debug/paymentsheet-example-debug-androidTest.apk --is-nightly --num-retries 2
 
       - name: Notify failure endpoint
