--- a/.github/workflows/instrumentation_tests.yml
+++ b/.github/workflows/instrumentation_tests.yml
@@ -20,6 +20,7 @@ jobs:
         run: pip install requests_toolbelt requests
 
       - name: 'Run BrowserStack tests'
+        timeout-minutes: 120
         env:
           BROWSERSTACK_USERNAME: ${{ secrets.BROWSERSTACK_USERNAME }}
           BROWSERSTACK_ACCESS_KEY: ${{ secrets.BROWSERSTACK_ACCESS_KEY }}
