--- a/paymentsheet-example/build.gradle
+++ b/paymentsheet-example/build.gradle
@@ -87,6 +87,7 @@ android {
 
         buildConfigField "boolean", "IS_RUNNING_IN_CI", "$gradle.ext.isCi"
         buildConfigField "boolean", "IS_NIGHTLY_BUILD", "$gradle.ext.isNightlyBuild"
+        buildConfigField "boolean", "IS_BROWSERSTACK_BUILD", "$gradle.ext.isBrowserstackBuild"
 
         manifestPlaceholders = [
                 BACKEND_URL: getBackendUrl(),
