Removes key references.

--- a/financial-connections/build.gradle
+++ b/financial-connections/build.gradle
@@ -80,6 +80,11 @@ dependencies {
 }
 
 android {
+    defaultConfig {
+        buildConfigField "String", "FC_SENTRY_SECRET", FC_SENTRY_SECRET
+        buildConfigField "String", "FC_SENTRY_KEY", FC_SENTRY_KEY
+    }
+
     buildFeatures {
         compose true
     }
