--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ plugins {
     id 'io.codearte.nexus-staging' version '0.30.0'
     id 'com.google.devtools.ksp' version '1.9.22-1.0.17' apply false
     id 'dev.drewhamilton.poko' version '0.15.2' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.9.22' apply false
 }
 
 apply plugin: "io.gitlab.arturbosch.detekt"
