--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -43,6 +43,7 @@ ext.versions = [
         kotlinCoroutines            : '1.7.3',
         kotlinSerialization         : '1.6.2',
         kotlinSerializationConverter: '1.0.0',
+        lint                        : '31.4.0',
         ktlint                      : '0.48.2',
         leakCanary                  : '2.14',
         material                    : '1.11.0',
@@ -155,11 +156,14 @@ ext.libs = [
         gson                                : "com.google.code.gson:gson:${versions.gson}",
         instantApps                         : "com.google.android.instantapps:instantapps:${versions.instantApps}",
         kotlin                              : [
+                standard              : "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}",
                 coroutines            : "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.kotlinCoroutines}",
                 coroutinesAndroid     : "org.jetbrains.kotlinx:kotlinx-coroutines-android:${versions.kotlinCoroutines}",
                 coroutinesPlayServices: "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:${versions.playServicesCoroutines}",
                 serialization         : "org.jetbrains.kotlinx:kotlinx-serialization-json:${versions.kotlinSerialization}",
         ],
+        lint                                : "com.android.tools.lint:lint-api:${versions.lint}",
+        lintChecks                          : "com.android.tools.lint:lint-checks:${versions.lint}",
         leakCanary                          : "com.squareup.leakcanary:leakcanary-android:${versions.leakCanary}",
         loggingInterceptor                  : "com.squareup.okhttp3:logging-interceptor:${versions.okhttp}",
         material                            : "com.google.android.material:material:${versions.material}",
@@ -225,6 +229,7 @@ ext.testLibs = [
                 inline : "org.mockito:mockito-inline:${versions.mockitoInline}",
                 kotlin : "org.mockito.kotlin:mockito-kotlin:${versions.mockitoKotlin}",
         ],
+        lint                 : "com.android.tools.lint:lint-tests:${versions.lint}",
         okhttpMockWebServer  : "com.squareup.okhttp3:mockwebserver:${versions.okhttp}",
         okhttpTls            : "com.squareup.okhttp3:okhttp-tls:${versions.okhttp}",
         robolectric          : "org.robolectric:robolectric:${versions.robolectric}",
