--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,10 +11,10 @@ ext.versions = [
         androidxAppcompat           : '1.6.1',
         androidxArchCore            : '2.2.0',
         androidxBrowser             : '1.7.0',
-        androidxCompose             : '1.6.8',
+        androidxCompose             : '1.7.0-beta03',
         androidxComposeCompiler     : '1.5.14',
-        androidxComposeRuntime      : '1.6.8',
-        androidxComposeUi           : '1.6.8',
+        androidxComposeRuntime      : '1.7.0-beta03',
+        androidxComposeUi           : '1.7.0-beta03',
         androidxConstraintlayout    : '2.1.4',
         androidxCore                : '1.12.0',
         androidxFragment            : '1.6.2',
