--- a/bitrise.yml
+++ b/bitrise.yml
@@ -439,7 +439,7 @@ workflows:
           title: Download robolectric dependencies
           inputs:
             - file_path: ./scripts/download_robolectric.sh
-      - set-java-version@1:
+      - set-java-version@32635b32f72a9560bc9c6ee76fbdf36559a6522b:
           inputs:
             - set_java_version: 21
       - script@1:
