Integrate Satispay on PaymentSheet and API bindings

--- a/example/AndroidManifest.xml
+++ b/example/AndroidManifest.xml
@@ -87,6 +87,7 @@
         <activity android:name=".activity.AlmaActivity"/>
         <activity android:name=".activity.SunbitActivity"/>
         <activity android:name=".activity.BillieActivity"/>
+        <activity android:name=".activity.SatispayActivity"/>
         <activity android:name=".activity.CardInputWidgetComposeExampleActivity"/>
     </application>
 
