--- a/example/AndroidManifest.xml
+++ b/example/AndroidManifest.xml
@@ -89,6 +89,7 @@
         <activity android:name=".activity.BillieActivity"/>
         <activity android:name=".activity.SatispayActivity"/>
         <activity android:name=".activity.CardInputWidgetComposeExampleActivity"/>
+        <activity android:name=".activity.ComposeLifecycleOwnerActivity"/>
     </application>
 
 </manifest>
