--- a/3ds2sdk/build.gradle
+++ b/3ds2sdk/build.gradle
@@ -12,23 +12,21 @@ android {
 
     buildTypes {
         // The 3ds2reference app requires a production variant to build with the SDK locally.
-        create("production") {
-            initWith(buildTypes["debug"])
+        production {
+            initWith buildTypes.debug
         }
     }
 
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
-            res.srcDirs = ['src/main/res']
-            assets.srcDirs = ['src/main/assets']
+            java.srcDirs += 'src/main/kotlin'
+            java.srcDirs += 'src/main/java'
         }
-        main.kotlin.srcDirs += 'src/main/kotlin'
-        main.java.srcDirs += 'src/main/kotlin'
         test {
-            java.srcDirs("src/test/kotlin")
+            manifest.srcFile 'src/main/AndroidManifest.xml'
+            java.srcDirs += 'src/test/kotlin'
             kotlin.srcDirs += 'src/test/kotlin'
-            setRoot('src/test')
         }
     }
 
