--- a/3ds2playground/build.gradle
+++ b/3ds2playground/build.gradle
@@ -25,6 +25,9 @@ android {
         disable += "ObsoleteLintCustomCheck"
         disable += "MonochromeLauncherIcon"
     }
+    detekt {
+        disableDefaultRuleSets = true
+    }
 
     kotlin {
         compilerOptions {
