--- a/3ds2sdk/build.gradle
+++ b/3ds2sdk/build.gradle
@@ -56,6 +56,10 @@ android {
         disable += "GradleDependency"
         disable += "UnusedResources"
         disable += "IconLocation"
+        disable += "LongMethod"
+    }
+    detekt {
+        disableDefaultRuleSets = true
     }
 
     compileOptions {
