--- a/financial-connections-example/build.gradle
+++ b/financial-connections-example/build.gradle
@@ -1,11 +1,15 @@
 apply from: configs.androidApplication
 
+apply plugin: 'com.emergetools.android'
 apply plugin: 'com.google.firebase.appdistribution'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'org.jetbrains.kotlin.plugin.serialization'
 
-
 def testEnvironment = System.getenv("test_environment") ?: "production"
+
+emerge {
+    apiToken.set(System.getenv("EMERGE_API_KEY"))
+}
 
 android {
     defaultConfig {
