--- a/financial-connections-example/build.gradle
+++ b/financial-connections-example/build.gradle
@@ -9,6 +9,13 @@ def testEnvironment = System.getenv("test_environment") ?: "production"
 
 emerge {
     apiToken = System.getenv("EMERGE_API_KEY")
+
+    vcs {
+        gitHub {
+            repoOwner = "EmergeTools"
+            repoName = "stripe-android"
+        }
+    }
 }
 
 android {
