Remove .api for 3ds2sdk and 3ds2playground, metadata.yaml

--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,8 @@ apiValidation {
             "paymentsheet-example",
             "stripecardscan-example",
             "screenshot-testing",
+            "3ds2sdk",
+            "3ds2playground",
     ]
     nonPublicMarkers.add("androidx.annotation.RestrictTo")
     nonPublicMarkers.add("dagger.internal.DaggerGenerated")
