Add 3ds2 api, remove 3ds2 publish script from build.gradle

--- a/3ds2sdk/build.gradle
+++ b/3ds2sdk/build.gradle
@@ -100,4 +100,5 @@ dependencies {
     testImplementation testLibs.androidx.archCore
 }
 
-apply from: "${rootDir}/3ds2sdk/publish.gradle"
+// Uncomment to publish locally with `./gradlew publishToMavenLocal`
+// apply from: "${rootDir}/3ds2sdk/publish.gradle"
