Fix `onBehalfOf` in Card Widget products

--- a/example/AndroidManifest.xml
+++ b/example/AndroidManifest.xml
@@ -42,6 +42,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".activity.TestCBCActivity" />
         <activity android:name=".activity.CreateCardTokenActivity" />
         <activity android:name=".activity.CreateCardSourceActivity" />
         <activity android:name=".activity.CustomerSessionActivity" />
