--- a/bitrise.yml
+++ b/bitrise.yml
@@ -432,7 +432,7 @@ workflows:
           run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
       - git-clone@8: { }
       - cache-pull@2: { }
-      - restore-gradle-cache@1: { }
+      - restore-gradle-cache@2: { }
       - script-runner@0:
           # Maven doesn't like java 17, so running it before.
           run_if: '{{getenv "NEEDS_ROBOLECTRIC" | ne ""}}'
@@ -448,8 +448,20 @@ workflows:
       - script@1:
           inputs:
             - content: echo "STRIPE_EXAMPLE_BACKEND_URL=$STRIPE_EXAMPLE_BACKEND_URL" >> ~/.gradle/gradle.properties; echo "STRIPE_EXAMPLE_PUBLISHABLE_KEY=$STRIPE_EXAMPLE_PUBLISHABLE_KEY" >> ~/.gradle/gradle.properties
+      - activate-build-cache-for-gradle:
+          inputs:
+            - push: 'true'
+            - validation_level: warning
+      - script@1:
+          inputs:
+            - content: |-
+                /tmp/bin/bitrise-build-cache restore-gradle-output-data
   conclude_all:
     steps:
+      - script@1:
+          inputs:
+            - content: |-
+                /tmp/bin/bitrise-build-cache save-gradle-output-data
       - script-runner@0:
           is_always_run: true
           title: Copy test results to tmp
