Add test activities

--- a/example/AndroidManifest.xml
+++ b/example/AndroidManifest.xml
@@ -42,7 +42,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.TestCBCActivity" />
+        <activity android:name=".activity.CardInputWidgetActivity" />
+        <activity android:name=".activity.CardMultilineWidgetActivity" />
+        <activity android:name=".activity.CardFormViewActivity" />
         <activity android:name=".activity.CreateCardTokenActivity" />
         <activity android:name=".activity.CreateCardSourceActivity" />
         <activity android:name=".activity.CustomerSessionActivity" />
