--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,7 @@ android.enableR8.fullMode=true
 android.nonFinalResIds=true
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+android.experimental.androidTest.numManagedDeviceShards=3
 
 # Update StripeSdkVersion.VERSION_NAME when publishing a new release
 VERSION_NAME=20.48.3
