--- a/paymentsheet/build.gradle
+++ b/paymentsheet/build.gradle
@@ -54,6 +54,7 @@ dependencies {
 
     testImplementation project(':link')
     testImplementation project(':financial-connections')
+    testImplementation project(':network-testing')
     testImplementation project(':payments-core-testing')
     testImplementation project(':screenshot-testing')
 
