--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -24,6 +24,7 @@ ext.versions = [
         androidxPreference          : '1.2.1',
         androidxRecyclerview        : '1.3.2',
         binaryCompatibilityValidator: '0.14.0',
+        bouncyCastle                : '1.69',
         cameraX                     : '1.3.1',
         dagger                      : '2.50',
         detekt                      : '1.23.6',
@@ -50,6 +51,7 @@ ext.versions = [
         mockito                     : '5.10.0',
         mockitoInline               : '5.2.0',
         mockitoKotlin               : '5.2.1',
+        nimbusJwt                   : '9.40',
         okhttp                      : '4.12.0',
         okio                        : '3.7.0',
         paparazzi                   : '1.3.3',
@@ -124,6 +126,9 @@ ext.libs = [
                 recyclerView      : "androidx.recyclerview:recyclerview:${versions.androidxRecyclerview}",
                 workManager       : "androidx.work:work-runtime-ktx:${versions.workManager}",
         ],
+        // use bcprov-jdk15to18 (1.5 to 1.8) instead of bcprov-jdk15on (1.5 onwards)
+        // to avoid conflicts with newer Java versions
+        bouncyCastle                        : "org.bouncycastle:bcprov-jdk15to18:${versions.bouncyCastle}",
         camera                              : [
                 core     : "androidx.camera:camera-core:${versions.cameraX}",
                 camera2  : "androidx.camera:camera-camera2:${versions.cameraX}",
@@ -166,6 +171,7 @@ ext.libs = [
         leakCanary                          : "com.squareup.leakcanary:leakcanary-android:${versions.leakCanary}",
         loggingInterceptor                  : "com.squareup.okhttp3:logging-interceptor:${versions.okhttp}",
         material                            : "com.google.android.material:material:${versions.material}",
+        nimbusJwt                           : "com.nimbusds:nimbus-jose-jwt:${versions.nimbusJwt}",
         okio                                : "com.squareup.okio:okio:${versions.okio}",
         payButtonCompose                    : "com.google.pay.button:compose-pay-button:${versions.payButtonCompose}",
         places                              : "com.google.android.libraries.places:places:${versions.places}",
