WIP - add skeleton of connect example

--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,7 @@ apiValidation {
             "payments-core-testing",
             "paymentsheet-example",
             "stripecardscan-example",
+            "stripe-connect-example",
             "screenshot-testing",
             "3ds2playground",
     ]
