--- a/settings.gradle
+++ b/settings.gradle
@@ -30,3 +30,5 @@ include ':screenshot-testing'
 include ':lint'
 include ':3ds2sdk'
 include ':3ds2playground'
+include ':stripe-connect-example'
+include ':stripe-connect'
