Add more features to prototype

--- a/stripe-connect-example/src/main/AndroidManifest.xml
+++ b/stripe-connect-example/src/main/AndroidManifest.xml
@@ -16,8 +16,9 @@
         <activity
         android:name=".MainActivity"
         android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.StripeConnectExample">
+        android:label="@string/app_name"
+        android:theme="@style/Theme.StripeConnectExample"
+        android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
