--- a/build-configuration/android-application.gradle
+++ b/build-configuration/android-application.gradle
@@ -5,6 +5,7 @@
  */
 apply plugin: "com.android.application"
 apply plugin: "kotlin-android"
+apply plugin: "kotlin-parcelize"
 
 apply from: rootProject.file('build-configuration/version.gradle')
 
