--- a/stripe-connect/src/main/AndroidManifest.xml
+++ b/stripe-connect/src/main/AndroidManifest.xml
@@ -3,11 +3,14 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
 
     <application>
         <activity
             android:name=".StripeConnectActivity"
             android:exported="false"
         />
+
     </application>
 </manifest>
