--- a/settings.gradle
+++ b/settings.gradle
@@ -22,6 +22,7 @@ include ':stripecardscan'
 include ':stripecardscan-example'
 include ':stripecardscan-tflite'
 include ':stripe-connect'
+include ':stripe-connect-example'
 include ':wechatpay'
 include ':ml-core:base'
 include ':ml-core:default'
