support network preferences for cardwidget

--- a/example/gradle.properties
+++ b/example/gradle.properties
@@ -1,1 +1,5 @@
 STRIPE_ANDROID_NAMESPACE=com.stripe.example
+STRIPE_EXAMPLE_BACKEND_URL=https://stripe-example-mobile-backend.glitch.me/
+
+# Set to a test publishable key from https://dashboard.stripe.com/test/apikeys
+STRIPE_EXAMPLE_PUBLISHABLE_KEY=pk_test_6Q7qTzl8OkUj5K5ArgayVsFD00Sa5AHMj3
