remove mocked test and update dependency

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -17,7 +17,6 @@ ext.versions = [
         androidxComposeUi           : '1.5.4',
         androidxConstraintlayout    : '2.1.4',
         androidxCore                : '1.13.1',
-        androidxCoreKtx             : '1.12.0',
         androidxFragment            : '1.6.2',
         androidxLegacySupport       : '1.0.0',
         androidxLifecycle           : '2.7.0',
@@ -115,7 +114,7 @@ ext.libs = [
                 browser           : "androidx.browser:browser:${versions.androidxBrowser}",
                 constraintLayout  : "androidx.constraintlayout:constraintlayout:${versions.androidxConstraintlayout}",
                 core              : "androidx.core:core:${versions.androidxCore}",
-                coreKtx           : "androidx.core:core-ktx:${versions.androidxCoreKtx}",
+                coreKtx           : "androidx.core:core-ktx:${versions.androidxCore}",
                 fragment          : "androidx.fragment:fragment-ktx:${versions.androidxFragment}",
                 legacySupport     : "androidx.legacy:legacy-support-v4:${versions.androidxLegacySupport}",
                 lifecycle         : "androidx.lifecycle:lifecycle-runtime-ktx:${versions.androidxLifecycle}",
