Add path & file pattern to `download-artifact` in `pull_request` workflow

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -53,6 +53,8 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: apk
+          path: apk
+          pattern: paymentsheet-example-release-*.apk
       - name: diffuse
         id: diffuse
         uses: usefulness/diffuse-action@d816fd102c1f5f69519ee4bb8e0e12a42d005788
