Update Emerge tools integration to use latest best practices (#9001)
* Update Emerge tools integration to use latest best practices

* Fix integrations & remove unused dependency

* Fix integrations & remove unused dependency

* Update with proper task name

* Add GitHub properties

* Updates

* Leverage set syntax

* Add proper tag

* Syntax

* Fix typo and update repoOwner

* Leverage implicit EMERGE_API_TOKEN env variable usage

--- a/financial-connections-example/build.gradle
+++ b/financial-connections-example/build.gradle
@@ -1,11 +1,26 @@
 apply from: configs.androidApplication
 
+apply plugin: 'com.emergetools.android'
 apply plugin: 'com.google.firebase.appdistribution'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'org.jetbrains.kotlin.plugin.serialization'
 
-
 def testEnvironment = System.getenv("test_environment") ?: "production"
+
+emerge {
+    // Api token is implicitly set to the EMERGE_API_TOKEN env variable
+
+    size {
+        tag.set(System.getenv("EMERGE_TAG"))
+    }
+
+    vcs {
+        gitHub {
+            repoOwner.set("stripe")
+            repoName.set("stripe-android")
+        }
+    }
+}
 
 android {
     defaultConfig {
