Remove getParcelableExtra for android 13 (#9223)

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -16,7 +16,7 @@ ext.versions = [
         androidxComposeRuntime      : '1.5.4',
         androidxComposeUi           : '1.5.4',
         androidxConstraintlayout    : '2.1.4',
-        androidxCore                : '1.12.0',
+        androidxCore                : '1.13.1',
         androidxFragment            : '1.6.2',
         androidxLegacySupport       : '1.0.0',
         androidxLifecycle           : '2.7.0',
@@ -113,6 +113,7 @@ ext.libs = [
                 appCompat         : "androidx.appcompat:appcompat:${versions.androidxAppcompat}",
                 browser           : "androidx.browser:browser:${versions.androidxBrowser}",
                 constraintLayout  : "androidx.constraintlayout:constraintlayout:${versions.androidxConstraintlayout}",
+                core              : "androidx.core:core:${versions.androidxCore}",
                 coreKtx           : "androidx.core:core-ktx:${versions.androidxCore}",
                 fragment          : "androidx.fragment:fragment-ktx:${versions.androidxFragment}",
                 legacySupport     : "androidx.legacy:legacy-support-v4:${versions.androidxLegacySupport}",
