[Connections] Skip networking on regular ME test. (#9284)
* Adds skip step.

* Update step.

--- a/maestro/financial-connections/Testmode-Token-ManualEntry.yaml
+++ b/maestro/financial-connections/Testmode-Token-ManualEntry.yaml
@@ -33,6 +33,10 @@ tags:
 - tapOn:
     text: "Submit"
     retryTapIfNoChange: false
+# SKIP NETWORKING
+- tapOn:
+    id: "skip_cta"
+    optional: true # Networking might not be enabled
 # CONFIRM AND COMPLETE
 - tapOn:
     id: "done_button"
