Update to compose 1.7.2.

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,5 +1,5 @@
 ext.versions = [
-        accompanist                 : '0.34.0',
+        accompanist                 : '0.36.0',
         alipay                      : '15.8.12',
         androidGradlePlugin         : '8.5.2',
         androidTest                 : '1.6.1',
@@ -12,10 +12,10 @@ ext.versions = [
         androidxAppcompat           : '1.6.1',
         androidxArchCore            : '2.2.0',
         androidxBrowser             : '1.7.0',
-        androidxCompose             : '1.6.8',
+        androidxCompose             : '1.7.2',
         androidxComposeCompiler     : '1.5.14',
-        androidxComposeRuntime      : '1.6.8',
-        androidxComposeUi           : '1.6.8',
+        androidxComposeRuntime      : '1.7.2',
+        androidxComposeUi           : '1.7.2',
         androidxConstraintlayout    : '2.1.4',
         androidxCore                : '1.13.1',
         androidxFragment            : '1.6.2',
@@ -145,6 +145,7 @@ ext.libs = [
                 material             : "androidx.compose.material:material:${versions.androidxCompose}",
                 materialIcons        : "androidx.compose.material:material-icons-core:${versions.androidxCompose}",
                 materialIconsExtended: "androidx.compose.material:material-icons-extended:${versions.androidxCompose}",
+                materialRipple       : "androidx.compose.material:material-ripple:${versions.androidxCompose}",
                 navigation           : "androidx.navigation:navigation-compose:${versions.androidxNavigation}",
                 runtime              : "androidx.compose.runtime:runtime:${versions.androidxComposeRuntime}",
                 ui                   : "androidx.compose.ui:ui:${versions.androidxComposeUi}",
