--- a/payments-ui-core/build.gradle
+++ b/payments-ui-core/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation libs.compose.foundation
     implementation libs.compose.material
     implementation libs.compose.materialIcons
+    implementation libs.compose.materialRipple
     implementation libs.compose.activity
     implementation libs.accompanist.flowLayout
     implementation libs.compose.uiToolingPreview
